# verba-vita

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: app.py  gtranslator.py  helpers.py  settings.py
