[tool.poetry]
name = "verba-vita"
version = "0.1.0"
description = ""
authors = ["Tahnasib Gafarov <tahnasibgafarov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
requests = "^2.31.0"
aiohttp = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
